--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
-1.02    2015-06-16
+1.02    2015-08-19
+        * Initial upload to CPAN
         * Now sets focus to the first field
         
 1.1     2015-06-03
